# eventflow

./: .env.example  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
src/eventflow/: __init__.py  __main__.py  n3xus.py
src/eventflow/api/: routes.py  websockets.py
src/eventflow/core/: config.py
src/eventflow/ingestion/: event_manager.py
src/eventflow/models/: __init__.py
tests/: test_api.py
